tests/typechecker/should_fail/fields_4.csp
channel a : Int.Int.Int
channel b : Int.Int
channel c : Int

Q(x) = c!x -> b!x -> STOP
